# bisky

./: Cargo.toml  README.md
.github/workflows/: rust.yml
binary-format/: Cargo.toml
binary-format/src/: build.rs  image.rs  lib.rs
binary-format/src/rv32im/: decode.rs  exec.rs  instruction.rs  mod.rs
cli/: Cargo.toml
platform/: Cargo.toml
